# py-libp2p-daemon-bindings

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  unit-tests.yml
newsfragments/: README.md
p2pclient/: __init__.py  control.py  daemon.py  dht.py  p2pclient.py  pubsub.py  serialization.py  utils.py
p2pclient/libp2p_stubs/crypto/pb/: crypto_pb2.py  crypto_pb2.pyi
p2pclient/libp2p_stubs/peer/: id.py  peerinfo.py
scripts/: install_p2pd.sh
tests/: test_p2pclient.py  test_p2pclient_integration.py  test_serialization.py
tests/libp2p_stubs/: test_interop.py  test_peerinfo.py
