[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p2pclient"
dynamic = ["version"]
authors = [
    { name = "Kevin Mai-Hsuan Chia", email = "kevin.mh.chia@gmail.com" },
]
description = "The libp2p daemon bindings for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.0.0",
    "base58>=1.0.3",
    "multiaddr>=0.2.0",
    "protobuf>=3.9.0",
    "pycryptodome>=3.0.0,<4.0.0",
    "py-multihash>=3.0.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/mhchia/py-libp2p-daemon-bindings"

[project.optional-dependencies]
test = [
    "mypy>=0.761,<1.0",
    "pytest-cov>=2.7.1,<3.0.0",
    "pytest>=7.0.0",
    "types-protobuf",
]
lint = [
    "ruff",
    "mypy-protobuf>=1.16",
]
dev = [
    "p2pclient[test,lint]",
    "tox>=3.13.2,<4.0.0",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "p2pclient._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["p2pclient/pb/*", "**/*_pb2*.py", "**/*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.towncrier]
package = "p2pclient"
package_dir = ""
filename = "newsfragments/README.md"
directory = "newsfragments/"
