[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p2pclient"
dynamic = ["version"]
authors = [
    { name = "Kevin Mai-Hsuan Chia", email = "kevin.mh.chia@gmail.com" },
]
description = "The libp2p daemon bindings for Python"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "anyio>=4.0.0",
    "base58>=1.0.3",
    "multiaddr>=0.2.0,<1.0.0",
    "protobuf>=4.25.0,<7.0.0",
    "pycryptodome>=3.9.2,<4.0.0",
    "py-multihash>=3.0.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/mhchia/py-libp2p-daemon-bindings"

[project.optional-dependencies]
test = [
    "mypy>=1.15.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "types-protobuf",
]
lint = [
    "ruff>=0.11.10",
    "mypy-protobuf>=3.0.0",
]
dev = [
    "p2pclient[test,lint]",
    "tox>=4.0.0",
    "build>=0.9.0",
    "pre-commit>=3.4.0",
    "towncrier>=25,<26",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "p2pclient._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
p2pclient = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["p2pclient/pb/*", "**/*_pb2*.py", "**/*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["p2pclient", "tests"]
known-third-party = ["anyio", "multiaddr", "pytest"]

[tool.towncrier]
package = "p2pclient"
package_dir = ""
filename = "newsfragments/README.md"
directory = "newsfragments/"

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal Changes"
showcontent = true

[tool.mypy]
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
